--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <h1>Welcome to the poem generator</h1>
+    <footer>
+      This page was coded by
+      <a href="https://www.codewithiza.com" target="_blank">Izabela</a> and it's
+      <a href="https://github.com/IzabelaLas/poem-generator" target="_blank"
+        >open source</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
