Add basic HTML layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>Welcome to the poem generator</h1>
+    <form>
+      <input type="text" placeholder="Enter a topic" autofocus required />
+      <input type="submit" value="Generate" />
+    </form>
+    <div>Poem will appear here</div>
     <footer>
       This page was coded by
       <a href="https://www.codewithiza.com" target="_blank">Izabela</a> and it's
