--- a/index.html
+++ b/index.html
@@ -7,19 +7,31 @@
     <title>Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to the poem generator</h1>
-    <form>
-      <input type="text" placeholder="Enter a topic" autofocus required />
-      <input type="submit" value="Generate" />
-    </form>
-    <div>Poem will appear here</div>
-    <footer>
-      This page was coded by
-      <a href="https://www.codewithiza.com" target="_blank">Izabela</a> and it's
-      <a href="https://github.com/IzabelaLas/poem-generator" target="_blank"
-        >open source</a
-      >
-    </footer>
+    <div class="container">
+      <h1>Welcome to the poem generator</h1>
+      <form>
+        <input
+          class="text-input"
+          type="text"
+          placeholder="Enter a topic"
+          autofocus
+          required
+        />
+        <input class="generate-button" type="submit" value="Generate" />
+      </form>
+      <div class="poem-container">
+        <p>Poem will appear here</p>
+        <p>Poem will appear here</p>
+      </div>
+      <footer>
+        This page was coded by
+        <a href="https://www.codewithiza.com" target="_blank">Izabela</a> and
+        it's
+        <a href="https://github.com/IzabelaLas/poem-generator" target="_blank"
+          >open source</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
