Connect to axios

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>Welcome to the poem generator</h1>
       <form>
         <input
+          id="text-input"
           class="text-input"
           type="text"
           placeholder="Enter a topic"
