Add english version

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
           value="Generate"
         />
       </form>
-      <div id="poem-container" class="poem-container"></div>
+      <div id="poem-container" class="poem-container hidden"></div>
+      <div
+        id="translated-poem-container"
+        class="translated-poem-container hidden"
+      ></div>
+      <button class="translate-button hidden" id="translate-button">
+        English version
+      </button>
       <footer>
         This page was coded by
         <a href="https://www.codewithiza.com" target="_blank">Izabela</a> and
